# Design_pattern

CRTP/: CMakeLists.txt
CRTP/builder/: car_builder.cpp  email_demo.cpp  htmlBuilder.cpp  html_test.cpp
CRTP/learn/: CMakeLists.txt  common_template.cpp  demo1.cpp  hello.cpp  learn_main.cpp  static_Polymorphism.cpp  test_mixin.cpp
Network/: CMakeLists.txt
Network/client/: CMakeLists.txt
Network/client/src/: client.cpp  select_client.cpp  select_client2.cpp  zmq_client.cpp  zmq_client_pull.cpp
Network/demo/: CMakeLists.txt
Network/demo/src/: client_IOCP.cpp  server_IOCP.cpp
Network/include/: person.h
Network/server/: CMakeLists.txt
Network/server/src/: select_server.cpp  server.cpp  zmq_server.cpp  zmq_server_push.cpp
Network/test/: CMakeLists.txt
Network/test/src/: serialize_test.cpp
Note/clion使用boost库/: cmake配置boost库.md
Singleton_pattern/: CMakeLists.txt
Singleton_pattern/mysql_connectPool/: CMakeLists.txt
Singleton_pattern/mysql_connectPool/Note/: qmsql笔记.md
Singleton_pattern/mysql_connectPool/include/: ConnPool.h  ConnPool.hpp  MysqlConn.h  MysqlConn.hpp
Singleton_pattern/mysql_connectPool/src/: ConnPool.cc  MysqlConn.cc  main.cpp
Singleton_pattern/mysql_connectPool/test/: test1.cc  test1.cpp  test_sqlconnect.cpp  use_mysql.cpp  use_qmysql.cpp
Singleton_pattern/src/: lazy_style.cpp  single_mode_common.cpp
copy_mode/: CMakeLists.txt
copy_mode/src/: demo1.cpp  learn_first.cpp
factor_designer/: CMakeLists.txt
factor_designer/src/: abstract_factor.cpp  factor_test.cpp  learn_first.cpp  mytest.cpp  other_demo.cpp
